--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         "php": "^8.2",
         "laravel/sanctum": "*",
         "laravel/tinker": "^2.10",
-        "laravel/framework": "*"
+        "laravel/framework": "*",
+        "nunomaduro/collision": "^8.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5"
     },
     "autoload": {
