--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
-        "laravel/sail": "^1.18",
         "mockery/mockery": "^1.6",
         "phpunit/phpunit": "^11.5"
     },
@@ -31,17 +30,9 @@
             "Tests\\": "tests/"
         }
     },
-    "scripts": {
-        "post-autoload-dump": [
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
-    },
+ "scripts": {
+  "post-autoload-dump": []
+},
     "minimum-stability": "stable",
     "prefer-stable": true
 }
