--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,14 @@ services:
     name: chef-asia-backend
     env: docker
     plan: free
-    buildCommand: ""
-    startCommand: "php artisan serve --host=0.0.0.0 --port=80"
+    buildCommand: "composer install --no-dev --optimize-autoloader"
+    startCommand: "apache2-foreground"
     envVars:
       - key: APP_ENV
         value: production
       - key: APP_KEY
         generateValue: true
+      - key: APP_DEBUG
+        value: false
+      - key: APP_URL
+        value: https://chef-asia-backend.onrender.com 
